--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "font-awesome": "^4.7.0",
     "framer-motion": "^10.16.16",
     "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.0",
     "markdown-to-jsx": "^7.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-lottie": "^1.2.4",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
