--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "lottie-react": "^2.4.0",
     "markdown-to-jsx": "^7.3.2",
     "react": "^18.2.0",
+    "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-lottie": "^1.2.4",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "recorder-js": "^1.0.7",
     "redux": "^5.0.0",
     "sonner": "^1.2.0",
+    "vmsg": "^0.4.0",
     "web-vitals": "^2.1.4",
     "zustand": "^4.4.6"
   },
