--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-tailwind/react": "^2.1.8",
     "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "classnames": "^2.5.1",
     "firebase": "^10.6.0",
     "font-awesome": "^4.7.0",
     "framer-motion": "^10.16.16",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
     "markdown-to-jsx": "^7.3.2",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18.2.0",
