--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "canvas-confetti": "^1.9.2",
     "classnames": "^2.5.1",
     "firebase": "^10.6.0",
     "font-awesome": "^4.7.0",
@@ -26,6 +27,7 @@
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-wavify": "^1.10.0",
     "recorder-js": "^1.0.7",
     "redux": "^5.0.0",
     "sonner": "^1.2.0",
